# note-finance

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json.bak  .mcp.json.template  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  academic-package-migration-report.md  docker-compose.yml  finance-topic-suggestion.skill  note-finance.code-workspace  pyproject.toml
.agents/skills/: ai-research-workflow  analyze-conflicts  commit-and-pr  ensure-quality  finance-news-workflow  generate-market-report  issue-implement-single  issue-implementation-serial  issue-sync  merge-pr  plan-docs-rename  plan-project  project-management  push  reddit-finance-topics  tdd-development  weekly-comment-generation  weekly-data-aggregation  weekly-report-validation  weekly-template-rendering  workflow-expert  worktree-done
.agents/workflows/: ai-research-collect.md  asset-management.md  finance-edit.md  finance-full.md  finance-suggest-topics.md  generate-market-report.md  new-finance-article.md  publish-to-note.md  reddit-finance-topics.md  write-tests.md
.claude/: agents.md  settings.json
.claude/agents/: agent-creator.md  ai-research-article-fetcher.md  api-usage-researcher.md  asset-management-reviser.md  asset-management-writer.md  case-study-writer.md  code-simplifier.md  command-expert.md  csa-critic-actionability.md  csa-critic-analysis.md  csa-critic-data.md  csa-critic-structure.md  exp-critic-balance.md  exp-critic-embed.md  exp-critic-empathy.md  exp-critic-reality.md  experience-reviser.md  experience-synthesizer.md  experience-writer.md  feature-implementer.md  finance-article-writer.md  finance-critic-compliance.md  finance-critic-data.md  finance-critic-fact.md  finance-critic-readability.md  finance-critic-structure.md  finance-reviser.md  finance-topic-suggester.md  issue-implementer.md  market-hypothesis-generator.md  news-article-fetcher.md  pr-design.md  pr-performance.md  pr-readability.md  pr-security-code.md  pr-security-infra.md  pr-test-coverage.md  pr-test-quality.md  project-decomposer.md  project-planner.md  (+24 more)
.claude/agents_sample/: edit-article-writer.md  edit-critic-depth.md  edit-critic-entertainment.md  edit-critic-fact.md  edit-critic-platform.md  edit-critic-structure.md  edit-critic-voice.md  edit-reviser.md  research-checks.md  research-claims-analyzer.md  research-claims.md  research-decisions.md  research-fact-checker.md  research-query-generator.md  research-reddit.md  research-source.md  research-visualize.md  research-web.md  research-wiki.md  topic-suggester.md  update-claude-md.md  update-readme.md
.claude/commands/: academic-fetch.md  ai-research-collect.md  article-critique.md  article-draft.md  article-full.md  article-init.md  article-publish.md  article-research.md  article-status.md  asset-management.md  backup-auradb.md  batch-pdf-claude.md  collect-experience-stories.md  collect-finance-news.md  commit-and-pr.md  convert-pdf-claude.md  convert-pdf.md  creator-enrichment.md  emit-graph-queue.md  experience-db-full.md  finance-edit.md  finance-full.md  finance-suggest-topics.md  gemini-search.md  generate-image-prompt.md  generate-market-report.md  kg-quality-check.md  merge-pr.md  new-finance-article.md  new-project.md  note-quality-check.md  pdf-to-knowledge.md  project-refine.md  publish-to-note.md  push.md  reddit-finance-topics.md  restructure-claims.md  save-to-graph.md  sync-claude-gemini.md  sync-issue.md  (+2 more)
.claude/commands_sample/: edit.md  initialize-project.md  make-task.md  new-article.md  new-plan.md  polish-plan.md  project-status.md  push.md  research.md  suggest-topics.md  wiki-search.md
.claude/guidelines/: agent-teams-patterns.md  skill-preload-spec.md
.claude/rules/: README.md  article-quality-standards.md  coding-standards.md  common-instructions.md  development-process.md  evidence-based.md  git-rules.md  neo4j-namespace-convention.md  neo4j-write-rules.md  subagent-data-passing.md  testing-strategy.md
.claude/templates/: weekly-report-issue.md
.gemini/: settings.json
.gemini/commands/: ai-research-collect.toml  asset-management.toml  commit-and-pr.toml  finance-edit.toml  finance-full.toml  finance-suggest-topics.toml  gemini-search.toml  generate-market-report.toml  merge-pr.toml  new-finance-article.toml  publish-to-note.toml  push.toml  reddit-finance-topics.toml  (+3 more)
.github/: PUSH_TEMPLATE.md
.playwright-mcp/: earnings_calendar_snapshot.md
.vscode_example/: .settings.json  tasks.json  user_settings.json
articles/: 2026-03-16_topic-proposals-from-article-neo4j.md
data/: README.md
docs/: knowledge-base-construction-guide.md  writing-quality-guideline.md
equity_research/: ISAT_IJ_vs_TLKM_IJ_comparison.md  README.md
exports/: 2026-02-17_ai-investment-team-report.md
scripts/: __init__.py  _script_utils.py  apply_metric_master.py  authority_classifier.py  backfill_stance_from_claims.py  backfill_temporal_chain.py  benchmark_performance.py  chart_presets.py  chart_theme.py  check_project_sync.py  classify_authority_level.py  collect_currency_rates.py  collect_finance_news.py  collect_finance_news_ai.py  collect_finance_news_index.py  collect_finance_news_macro.py  collect_finance_news_sector.py  collect_finance_news_stock.py  collect_interest_rates.py  collect_market_performance.py  collect_upcoming_events.py  com.finance.news-collector.plist  convert_scraped_news.py  emit_creator_queue.py  emit_creator_queue_v2.py  emit_graph_queue.py  entity_linker.py  fix_entity_id_null.py  fix_legacy_relationships.py  generate_chart_image.py  generate_table_image.py  kg_accuracy_judge.py  kg_entity_completeness.py  kg_quality_alert.py  kg_quality_metrics.py  kg_quality_weekly.sh  market_report_data.py  migrate_article_to_research.py  migrate_articles.py  migrate_skill_run_schema.py  (+20 more)
snippets/: cta-permium.md  data-source.md  disclaimer.md  investment-risk.md  nisa-disclaimer.md  not-advice.md  sns-announcement.md  warning.md
tests/: conftest.py
todo/: TODO_2026-03-17.md  TODO_2026-03-18.md  TODO_2026-03-19.md  TODO_2026-03-21.md  TODO_2026-03-22.md
(+1881 files in other folders)
