[project]
name = "note-finance"
version = "0.1.0"
description = "note.com 金融記事作成・ニュース収集パイプライン"
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.4.0",
    "rich>=13.7.0",
    "filelock>=3.20.3",
    "httpx>=0.28.1",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "trafilatura>=2.0.0",
    "anthropic>=0.76.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.2",
    "finance",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "hypothesis>=6.150.2",
    "pyright>=1.1.403",
    "ruff>=0.14.11",
]
mcp = ["fastmcp>=2.14.3", "mcp>=1.0.0"]
cli = ["click>=8.1.0"]
playwright = ["playwright>=1.49.0,<2.0.0"]
automation = ["claude-agent-sdk>=0.1.22", "anyio>=4.0.0"]
scheduler = ["apscheduler>=3.10.0"]

[project.scripts]
rss-mcp = "rss.mcp.server:main"
rss-cli = "rss.cli.main:cli"
collect-finance-news = "automation.news_collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rss", "src/news", "src/automation"]

[tool.uv.sources]
finance = { path = "../finance", editable = true }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "RUF", "TCH", "PTH", "PL"]
ignore = ["E501", "F401", "PLR0913", "PLR2004", "PLC0415", "PLC2401", "RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
