[project]
name = "note-finance"
version = "0.1.0"
description = "note.com 金融記事作成・ニュース収集パイプライン"
requires-python = ">=3.12"
dependencies = [
    "structlog>=25.4.0",
    "rich>=13.7.0",
    "filelock>=3.20.3",
    "httpx>=0.28.1",
    "feedparser>=6.0.12",
    "lxml>=6.0.2",
    "trafilatura>=2.0.0",
    "anthropic>=0.76.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.2",
    "finance",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.3",
    "hypothesis>=6.150.2",
    "pyright>=1.1.403",
    "ruff>=0.14.11",
    "pip-audit>=2.9.0",
    "yfinance>=0.2.0",
    "bandit>=1.8.0",
    "cssselect>=1.2.0",
]
mcp = ["fastmcp>=2.14.3", "mcp>=1.0.0"]
cli = ["click>=8.1.0"]
playwright = ["playwright>=1.49.0,<2.0.0"]
automation = ["claude-agent-sdk>=0.1.22", "anyio>=4.0.0"]
scheduler = ["apscheduler>=3.10.0"]

[project.scripts]
rss-mcp = "rss.mcp.server:main"
rss-cli = "rss.cli.main:cli"
collect-finance-news = "automation.news_collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rss", "src/news", "src/automation", "src/news_scraper"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "RUF", "TCH", "PTH", "PL"]
ignore = ["E501", "F401", "PLR0913", "PLR2004", "PLC0415", "PLC2401", "RUF001", "RUF002", "RUF003"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
extraPaths = ["scripts", "src"]
# AIDEV-NOTE: 以下は claude-agent-sdk API変更・feedparser型スタブ不整合等による
# 既存のpyright警告ファイル。独立したIssueとして修正予定のため一時的に除外。
exclude = [
    "src/automation/news_collector.py",
    "src/news/sinks/github.py",
    "src/rss/core/parser.py",
    "tests/news/unit/summarizers/test_summarizer.py",
    "tests/news/unit/test_models.py",
    "tests/news/unit/test_models_category.py",
    "tests/news/unit/sinks/test_github.py",
    "tests/news/unit/test_article.py",
    "tests/news/unit/config/test_workflow.py",
    "tests/rss/integration/test_github_project_e2e.py",
    "tests/rss/unit/services/company_scrapers/test_registry.py",
    "tests/rss/unit/services/test_article_content_checker.py",
    "tests/news/unit/test_source.py",
    "tests/news/unit/test_sink.py",
    "tests/news/unit/test_result.py",
    "tests/news/unit/test_processor.py",
]

[tool.bandit]
# B311: random はレート制限ジッターやサンプリング等の非セキュリティ用途で使用（誤検知）
# B607: gh / playwright 等の信頼済みコマンドを PATH 経由で起動（誤検知）
skips = ["B311", "B607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
addopts = ["-ra", "--strict-markers", "--strict-config"]

[tool.uv.sources]
finance = { git = "https://github.com/YH-05/finance.git" }
